--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,10 @@
 [tox]
-envlist=py24-1.0,py24-1.1,py24-1.2,py25-1.0,py25-1.1,py25-1.2,py25,py25-trunk,py26-1.0,py26-1.1,py26-1.2,py26,py26-trunk,py27-1.0,py27-1.1,py27-1.2,py27,py27-trunk
+envlist=py25-1.1,py25-1.2,py25,py25-trunk,py26-1.1,py26-1.2,py26,py26-trunk,py27-1.1,py27-1.2,py27,py27-trunk
 
 [testenv]
 deps=
   django==1.3.1
 commands=python setup.py test
-
-[testenv:py24-1.0]
-basepython=python2.4
-deps=
-  django==1.0.4
-  pysqlite==2.6.3
-
-[testenv:py24-1.1]
-basepython=python2.4
-deps=
-  django==1.1.4
-  pysqlite==2.6.3
-
-[testenv:py24-1.2]
-basepython=python2.4
-deps=
-  django==1.2.7
-  pysqlite==2.6.3
-
-[testenv:py25-1.0]
-basepython=python2.5
-deps=
-  django==1.0.4
 
 [testenv:py25-1.1]
 basepython=python2.5
@@ -42,12 +19,7 @@ deps=
 [testenv:py25-trunk]
 basepython=python2.5
 deps=
-  svn+http://code.djangoproject.com/svn/django/trunk#egg=django
-
-[testenv:py26-1.0]
-basepython=python2.6
-deps=
-  django==1.0.4
+  https://github.com/django/django/tarball/master
 
 [testenv:py26-1.1]
 basepython=python2.6
@@ -62,12 +34,7 @@ deps=
 [testenv:py26-trunk]
 basepython=python2.6
 deps=
-  svn+http://code.djangoproject.com/svn/django/trunk#egg=django
-
-[testenv:py27-1.0]
-basepython=python2.7
-deps=
-  django==1.0.4
+  https://github.com/django/django/tarball/master
 
 [testenv:py27-1.1]
 basepython=python2.7
@@ -82,4 +49,5 @@ deps=
 [testenv:py27-trunk]
 basepython=python2.7
 deps=
-  svn+http://code.djangoproject.com/svn/django/trunk#egg=django
+  https://github.com/django/django/tarball/master
+
