--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist=py25-1.1,py25-1.2,py25,py25-trunk,py26-1.1,py26-1.2,py26,py26-trunk,py27-1.1,py27-1.2,py27,py27-trunk
+envlist=py25-1.3,py25-1.4,py26-1.3,py26-1.4,py26,py26-trunk,py27-1.3,py27-1.4,py27,py27-trunk
 
 [testenv]
 deps=
-  django==1.3.1
+  django==1.5.1
 commands=python setup.py test
 
 [testenv:py25-1.1]
@@ -16,10 +16,15 @@ basepython=python2.5
 deps=
   django==1.2.7
 
-[testenv:py25-trunk]
+[testenv:py25-1.3]
 basepython=python2.5
 deps=
-  https://github.com/django/django/tarball/master
+  django==1.3.7
+
+[testenv:py25-1.4]
+basepython=python2.5
+deps=
+  django==1.4.5
 
 [testenv:py26-1.1]
 basepython=python2.6
@@ -30,6 +35,16 @@ deps=
 basepython=python2.6
 deps=
   django==1.2.7
+
+[testenv:py26-1.3]
+basepython=python2.6
+deps=
+  django==1.3.7
+
+[testenv:py26-1.4]
+basepython=python2.6
+deps=
+  django==1.4.5
 
 [testenv:py26-trunk]
 basepython=python2.6
@@ -46,8 +61,17 @@ basepython=python2.7
 deps=
   django==1.2.7
 
+[testenv:py27-1.3]
+basepython=python2.7
+deps=
+  django==1.3.7
+
+[testenv:py27-1.4]
+basepython=python2.7
+deps=
+  django==1.4.5
+
 [testenv:py27-trunk]
 basepython=python2.7
 deps=
   https://github.com/django/django/tarball/master
-
