--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,10 @@
 [tox]
-envlist=py25-1.3,py25-1.4,py26-1.3,py26-1.4,py26,py26-trunk,py27-1.3,py27-1.4,py27,py27-trunk
+envlist=
+  py26-1.3,py26-1.4,py26-1.5,py26-1.6,
+  py27-1.3,py27-1.4,py27-1.5,py27-1.6,py27-trunk
 
 [testenv]
-deps=
-  django==1.5.1
 commands=python setup.py test
-
-[testenv:py25-1.1]
-basepython=python2.5
-deps=
-  django==1.1.4
-
-[testenv:py25-1.2]
-basepython=python2.5
-deps=
-  django==1.2.7
-
-[testenv:py25-1.3]
-basepython=python2.5
-deps=
-  django==1.3.7
-
-[testenv:py25-1.4]
-basepython=python2.5
-deps=
-  django==1.4.5
-
-[testenv:py26-1.1]
-basepython=python2.6
-deps=
-  django==1.1.4
-
-[testenv:py26-1.2]
-basepython=python2.6
-deps=
-  django==1.2.7
 
 [testenv:py26-1.3]
 basepython=python2.6
@@ -44,22 +14,17 @@ deps=
 [testenv:py26-1.4]
 basepython=python2.6
 deps=
-  django==1.4.5
+  django==1.4.8
 
-[testenv:py26-trunk]
+[testenv:py26-1.5]
 basepython=python2.6
 deps=
-  https://github.com/django/django/tarball/master
+  django==1.5.4
 
-[testenv:py27-1.1]
-basepython=python2.7
+[testenv:py26-1.6]
+basepython=python2.6
 deps=
-  django==1.1.4
-
-[testenv:py27-1.2]
-basepython=python2.7
-deps=
-  django==1.2.7
+  https://github.com/django/django/tarball/stable/1.6.x
 
 [testenv:py27-1.3]
 basepython=python2.7
@@ -69,7 +34,17 @@ deps=
 [testenv:py27-1.4]
 basepython=python2.7
 deps=
-  django==1.4.5
+  django==1.4.8
+
+[testenv:py27-1.5]
+basepython=python2.7
+deps=
+  django==1.5.4
+
+[testenv:py27-1.6]
+basepython=python2.7
+deps=
+  https://github.com/django/django/tarball/stable/1.6.x
 
 [testenv:py27-trunk]
 basepython=python2.7
