--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist=
   py26-1.3,py26-1.4,py26-1.5,py26-1.6,
-  py27-1.3,py27-1.4,py27-1.5,py27-1.6,py27-trunk
+  py27-1.3,py27-1.4,py27-1.5,py27-1.6,py27-1.7
 
 [testenv]
 commands=python setup.py test
@@ -14,17 +14,17 @@ deps=
 [testenv:py26-1.4]
 basepython=python2.6
 deps=
-  django==1.4.8
+  django==1.4.10
 
 [testenv:py26-1.5]
 basepython=python2.6
 deps=
-  django==1.5.4
+  django==1.5.5
 
 [testenv:py26-1.6]
 basepython=python2.6
 deps=
-  https://github.com/django/django/tarball/stable/1.6.x
+  django==1.6.2
 
 [testenv:py27-1.3]
 basepython=python2.7
@@ -34,19 +34,19 @@ deps=
 [testenv:py27-1.4]
 basepython=python2.7
 deps=
-  django==1.4.8
+  django==1.4.10
 
 [testenv:py27-1.5]
 basepython=python2.7
 deps=
-  django==1.5.4
+  django==1.5.5
 
 [testenv:py27-1.6]
 basepython=python2.7
 deps=
-  https://github.com/django/django/tarball/stable/1.6.x
+  django==1.6.2
 
-[testenv:py27-trunk]
+[testenv:py27-1.7]
 basepython=python2.7
 deps=
-  https://github.com/django/django/tarball/master
+  https://github.com/django/django/tarball/stable/1.7.x
