--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist=
   py26-1.3,py26-1.4,py26-1.5,py26-1.6,
-  py27-1.3,py27-1.4,py27-1.5,py27-1.6,py27-1.7
+  py27-1.3,py27-1.4,py27-1.5,py27-1.6,py27-1.7,py27-master
 
 [testenv]
 commands=python setup.py test
@@ -50,3 +50,8 @@ deps=
 basepython=python2.7
 deps=
   https://github.com/django/django/tarball/stable/1.7.x
+
+[testenv:py27-master]
+basepython=python2.7
+deps=
+  https://github.com/django/django/tarball/master
